UI: Fix dark-mode renders for code blocks
This seeks to improve the rendering of code snippets in dark mode. Notably, blocks nested inside of admonitions were hard to read in dark mode. This PR swaps out the background color value to use one of Dracula's (our syntax highlighter's theme) purple values that closely matches our admonition color, while providing good contrast and ease of reading for the bright colors of the highlighter. Further, the hardcoding of text colors has been removed; it would appear that Dracula's YAML highlighting in dark mode is the only thing that doesn't play well with our setup. But, this isn't a blocker.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -749,10 +749,6 @@ pre code {
   border: 1px solid #c6d6ff;
 }
 
-pre code span {
-  color: #00288e;
-}
-
 table {
   border-radius: 12px;
   border: 1px solid #e5e7eb;
@@ -1197,7 +1193,7 @@ table td {
   border: 1px solid #2d3956;
 }
 [data-theme='dark'] pre code span {
-  color: var(--neutral-mid-400);
+  /* color: var(--neutral-mid-400); */
 }
 [data-theme='dark'] p code {
   border: 1px solid #28334f;
@@ -1267,7 +1263,7 @@ table td {
 [data-theme='dark'] .theme-admonition-info code,
 [data-theme='dark'] .alert--info code {
   border: 1px solid #80a3ff;
-  background-color: #c6d6ff;
+  background-color: #6272a4;
 }
 
 [data-theme='dark'] .theme-admonition-caution,
